fix vertical align using aspect rations

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,10 +15,10 @@ $default-font: "Saira Condensed", sans-serif;
 
 #home{
   display: flex;
+  flex-direction: column;
   align-items: center;
-  align-items: center;
-  // justify-content: center;
-  height: 80%;
+  justify-content: center;
+  height: 77%;
 
   @media only screen and (min-device-height: 1300px){
     height: 90%;
